--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -19,6 +19,16 @@
      <p>Python Anywhere is a gratis service to host, run, and code Python on someone else's servers.</p>
 </div>
 
+<div class='container'>
 
+  <h3><small>Why did I choose to host this site on Python Anywhere?</small></h3>
+  <p> I wanted to use my <a href="https://www.raspberrypi.org/">Raspberry Pi</a> as a server for this site and use <a href="http://www.duckdns.org/">DuckDNS</a> for my domain name, but didn't want to open up my LAN up to the world, and really didn't want deal with the constant port scans that accompany that.</p>
+
+  <h3><small>This site seems to be very simplistic?!</small></h3>
+  <p> Yes!! This is by design, too many sites these days go overboard with the JavaScript, which is really lousy for users with a slow internet connection or users who use text only browsers. This site is almost entirely HTML, with a little bit of bootstrap for the CSS. I leave no cookies (although bootstrap and Python Anywhere both leave one), no JavaScript, and few images, for a snappy performance.</p>
+  <p></p>
+  <p> Screen shot of the making of  this site</p>
+  <img src="/static/flaskwork.png" alt="Image_Error" style="width:608px;height:456px;">
+</div>
 
 {% endblock %}
