--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,13 +3,101 @@
 {% extends "base.html" %}
 {% block title %}Home{% endblock %}
 {% block body %}
+
+<style>
+h2#h201{
+ text-indent: 25%;
+}
+
+h2#h202{
+ text-indent: 5%;
+}
+
+
+p#p01{
+ text-indent: 10%;
+}
+
+
+</style>
+
 <div class="jumbotron">
   <h1>My Resume</h1>
   <p class="lead">My Public Facing Resume</p>
 </div>
 
-<div class='container'>
-    <p> some text about this or that</p>
+<div class="container">
+    <h1><center>Alexander Mednis</center></h1>
+    <h2 align="right"><small>mednisalex@gmail.com</small></h2>
+    <h2 align='left'>Certifications:</h2>
+    <h2 id="h201"><small>
+        <ul style="list-style-type:none">
+            <li> Food Handler ~ 2017</li>
+            <li> CPR ~ 2017</li>
+            <li> Smart Serve ~ 2017</li>
+            <li> WHMIS ~ 2017</li>
+        </ul>
+    </small></h2>
+    <h2 align='left'>Summary of Skills:</h2>
+    <p id='p01'>    
+        <ul>
+            <li> Experience working in a professional environment, avoiding sensitive topics, and respecting confidentiality.</li>
+            <li> Comfortable working with people or as an individual.</li>
+            <li> Experience using various equipment safely, such as kitchen utensils, construction tools and janitorial supplies.</li>
+            <li>Exited to learn new equipment or programs.</li>
+            <li>Intermediate use of word processors, text editors, python, as well as some knowledge of bash, excell and shell scripting.(comfortable on a command line)</li>
+            <li> Janitorial duties - Experience sweeping, moping, vacuuming and using different cleaners and disinfectants.</li>
+            <li> Available for a variety of shifts, any day of the week.</li>
+        </ul>
+    <p>
+    <h2 align='left'>Work History:</h2>
+    <h2 id='h202'><small>Town Parks and Recreation ~ May 2017</small></h2>
+    <p id='p01'>
+        <ul>
+            <li>Pick up debris from streets and parks.</li>
+            <li>Check if public trashcans need to be emptied.</li>
+            <li>Communicate and log which streets my shift covered for the next next crew.</li>
+        </ul>
+    </p>
+    <h2 id='h202'><small>Hobby Farm ~ 2012-Present</small></h2>
+    <p id='p01'>
+        <ul>
+            <li>Feed, water, and care for animals on a daily basis.</li>
+            <li>Clean and maintain pens and enclosures, including fence repair.</li>
+        </ul>
+    </p>
+    <h2 id='h202'><small>Construction labouror</small></h2>
+    <p id='p01'>
+        <ul>
+            <li>Worked as part of a crew to complete jobs uniformly in relation to each other, in regards to tie and layout.</li>
+            <li>Loading and unloading of tools and building materials, with the use of dollies, pumptrucks, and suction cups.</li>
+            <li> Installation of shelving, cabinetry and store fixtures according to layout.
+            <li> Prepping store fixtures to be ready for merchandisers to stock, including wiping fixtures down, and cleaning the immediate area around them.</li>
+            <li> Keeping work are sorted and clean, encouraging a hazard free work environment, as well as showing a level of professionalism.</li>
+        </ul>
+    </p>
+
+    <h2 align='left'>Volunteer Experience:</h2>
+    <h2 id='h202'><small>Senior's Residence ~ 2017-Present</small></h2>
+    <p id='p01'>
+        <ul>
+            <li>Setup, referee and score shuffle board games.</li>
+            <li>Host and call bingo games.</li>
+            <li>Hand out prizes to game winners.</li>
+            <li>Some minor data entry.</li>
+        </ul>
+
+    <h2 id='h202'><small>Cancer Support Centre ~ 2014</small></h2>
+    <p id='p01'>
+        <ul>
+            <li>Preparation of meals for members of the social club.</li>
+            <li>Cleaning and sanitation of yoga rooms and mats.</li>
+            <li>Calling members to confirm/update profile information in spreadsheet program.</li>
+        </ul>
+
+
+
+      
 </div>
 
 {% endblock %}
