--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -24,6 +24,11 @@ p#p01{
 <div class="jumbotron">
   <h1>My Resume</h1>
   <p class="lead">My Public Facing Resume</p>
+  <p>Download in  
+      <a href="/static/Alex_Mednis_Resume.odt" download>odt</a> or
+      <a href="/static/Alex_Mednis_Resume.pdf" download>pdf</a> or
+      <a href="/static/Alex_Mednis_Resume.docx" download>docx</a>
+    or scroll down to read.</p>
 </div>
 
 <div class="container">
