--- a/app/templates/aboutme.html
+++ b/app/templates/aboutme.html
@@ -14,18 +14,25 @@ a simple app with the Flask framework.</p>
 
 <p> In my free time I enjoy volunteering to run recreational games at
  the local seniors residence, which I do twice a week, I also enjoy
- scripting projects with python, such as this site, and I am looking
- into learning a more robust computer language as a hobby.</p>
-
-<p> I enjoy cooking, and often experiment with foods I haven't tried
- before, as well as foraging wild foods. I have recently gotten my
- safe food handler certificate towards that end, as well as my smartserve
- and cpr, and looking forward to any further ongoing education courses.</p>
+ scripting projects with python, such as this site. I also enjoy cooking,
+and attend cooking classes that are hosted at the grocery store, trying 
+out and making different cusines as well as foraging for edible plants 
+and fruits.</p>
 
 <p> I also have a passion for working with animals, I enjoy taking my dogs
- for a walk, and watching my goats and collecting eggs from my chickens,
- sugar gliders are of a particular interest to me although I have opted 
+ for a walk, and watching my goats roam,  and collecting eggs from my chickens.
+ Sugar gliders are of a particular interest to me although I have opted
 not to buy any yet as owning them is a full time job in and of itself.</p>
+
+<p> I have recently gotten my safe food handler certificate, as well as my smartserve
+ and cpr, and I am open to further courses to improve my skill set or enhance my 
+education, exspecially in the realms of cooking, animal care, and computers.</p>
+
+<p> Thanks for taking the time to read this, any questions or comments can
+ be directed at my email  mednisalex@gmail.com </p>
+
+<h4 align='left'> ---Alex Mednis</h4>
+
 
 </div>
 
