--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -74,7 +74,7 @@ p#p01{
     <h2 id='h202'><small>Construction labouror</small></h2>
     <p id='p01'>
         <ul>
-            <li>Worked as part of a crew to complete jobs uniformly in relation to each other, in regards to tie and layout.</li>
+            <li>Worked as part of a crew to complete jobs uniformly in relation to each other, in regards to time and layout.</li>
             <li>Loading and unloading of tools and building materials, with the use of dollies, pumptrucks, and suction cups.</li>
             <li> Installation of shelving, cabinetry and store fixtures according to layout.
             <li> Prepping store fixtures to be ready for merchandisers to stock, including wiping fixtures down, and cleaning the immediate area around them.</li>
