--- a/app/templates/aboutme.html
+++ b/app/templates/aboutme.html
@@ -9,27 +9,18 @@
 </div>
 
 <div class='container'>
-<p> I created this site to host my resume and to learn how to create 
+<p> This website was created to host my resume and to learn how to create 
 a simple app with the Flask framework.</p>
 
-<p> In my free time I enjoy volunteering to run recreational games at
- the local seniors residence, which I do twice a week, I also enjoy
- scripting projects with python, such as this site. I also enjoy cooking,
-and attend cooking classes that are hosted at the grocery store, trying 
-out and making different cusines as well as foraging for edible plants 
-and fruits.</p>
+<p>In my free time I enjoy volunteering. More recently I began volunteering at a senior’s residence. With this position my typical key responsibilities are to interact with clients, assist them when needed in the activity being facilitated and insuring client’s wellbeing are being met. Through this opportunity I have learned I enjoy working with seniors in this respect. Other tasks I have completed were scraping the internet with a simple script to fill in information for their movie collection, as well as filling out filling birthday cards with a program from Microsoft Office Suite.</p>
 
-<p> I also have a passion for working with animals, I enjoy taking my dogs
- for a walk, and watching my goats roam,  and collecting eggs from my chickens.
- Sugar gliders are of a particular interest to me although I have opted
-not to buy any yet as owning them is a full time job in and of itself.</p>
+<p>In the future I would be interested in pursuing employment in the food industry in a residential home setting. In pursuit of this goal I have attended cooking classes that are hosted at the grocery store, trying out and making different cuisines and cooking styles. I have recently gotten my safe food handler’s certificate towards this end. In my free time I enjoy researching recipes and recreating them. 
 
-<p> I have recently gotten my safe food handler certificate, as well as my smartserve
- and cpr, and I am open to further courses to improve my skill set or enhance my 
-education, exspecially in the realms of cooking, animal care, and computers.</p>
+<p>Living on a hobby farm, I’ve been given the opportunity to regularly care for animals; taking my dogs for a walk, and watching my goats roam, and collecting eggs from my chickens. Sugar gliders are of a particular interest to me, although I have opted not to buy any yet as owning them is a full time job in and of itself.</p>
 
-<p> Thanks for taking the time to read this, any questions or comments can
- be directed at my email  mednisalex@gmail.com </p>
+<p>Along with my safe food handler certificate, I also earned my smartserve and cpr. I am open to further courses to improve my skill set or enhance my education, especially in the realms of cooking, animal care, and computers.</p>
+
+<p>Thanks for taking the time to read this, any questions or comments can be directed at my email mednisalex@gmail.com </p>
 
 <h4 align='left'> ---Alex Mednis</h4>
 
