--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -35,8 +35,8 @@ p#p01{
     <h1><center>Alexander Mednis</center></h1>
     <h2 align="right"><small>mednisalex@gmail.com</small></h2>
     <h2 align='left'>Certifications:</h2>
-    <h2 id="h201"><small>
-        <ul style="list-style-type:none">
+    <h2><small>
+        <ul>
             <li> Food Handler ~ 2017</li>
             <li> CPR ~ 2017</li>
             <li> Smart Serve ~ 2017</li>
@@ -52,15 +52,15 @@ p#p01{
             <li>Exited to learn new equipment or programs.</li>
             <li>Intermediate use of word processors, text editors, python, as well as some knowledge of bash, excell and shell scripting.(comfortable on a command line)</li>
             <li> Janitorial duties - Experience sweeping, moping, vacuuming and using different cleaners and disinfectants.</li>
-            <li> Available for a variety of shifts, any day of the week.</li>
+            <li> Accommodated a variety of shifts, through out the week.</li>
         </ul>
     <p>
     <h2 align='left'>Work History:</h2>
     <h2 id='h202'><small>Town Parks and Recreation ~ May 2017</small></h2>
     <p id='p01'>
         <ul>
-            <li>Pick up debris from streets and parks.</li>
-            <li>Check if public trashcans need to be emptied.</li>
+            <li>Responsible for removal of debris from streets and parks.</li>
+            <li>Reported if public trashcans needed to be emptied.</li>
             <li>Communicate and log which streets my shift covered for the next next crew.</li>
         </ul>
     </p>
@@ -68,7 +68,8 @@ p#p01{
     <p id='p01'>
         <ul>
             <li>Feed, water, and care for animals on a daily basis.</li>
-            <li>Clean and maintain pens and enclosures, including fence repair.</li>
+            <li>Constructed pens and enclosures</li>
+            <li>Clean and maintain pens and enclosures, including strengthening fences.</li>
         </ul>
     </p>
     <h2 id='h202'><small>Construction labouror</small></h2>
@@ -83,13 +84,13 @@ p#p01{
     </p>
 
     <h2 align='left'>Volunteer Experience:</h2>
-    <h2 id='h202'><small>Senior's Residence ~ 2017-Present</small></h2>
+    <h2 id='h202'><small>Senior's Residence ~ March 2017-Present</small></h2>
     <p id='p01'>
         <ul>
-            <li>Setup, referee and score shuffle board games.</li>
+            <li>Responsible for the setup, refereeing and scoring of shuffle board games.</li>
             <li>Host and call bingo games.</li>
             <li>Hand out prizes to game winners.</li>
-            <li>Some minor data entry.</li>
+            <li>Automated some minor data entry implementing the use of a scripting language.</li>
         </ul>
 
     <h2 id='h202'><small>Cancer Support Centre ~ 2014</small></h2>
