--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -61,7 +61,7 @@ p#p01{
         <ul>
             <li>Responsible for removal of debris from streets and parks.</li>
             <li>Reported if public trashcans needed to be emptied.</li>
-            <li>Communicate and log which streets my shift covered for the next next crew.</li>
+            <li>Communicate and log which streets my shift covered for the next crew.</li>
         </ul>
     </p>
     <h2 id='h202'><small>Hobby Farm ~ 2012-Present</small></h2>
