--- a/app/templates/aboutme.html
+++ b/app/templates/aboutme.html
@@ -20,7 +20,7 @@ a simple app with the Flask framework.</p>
 
 <p>Along with my safe food handler certificate, I also earned my smartserve and cpr. I am open to further courses to improve my skill set or enhance my education, especially in the realms of cooking, animal care, and computers.</p>
 
-<p>Thanks for taking the time to read this, any questions or comments can be directed at my email mednisalex@gmail.com </p>
+<p>Thanks for taking the time to read this, any questions or comments can be directed at my email mednisalex@tuta.io </p>
 
 <h4 align='left'> ---Alex Mednis</h4>
 
