--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -33,7 +33,7 @@ p#p01{
 
 <div class="container">
     <h1><center>Alexander Mednis</center></h1>
-    <h2 align="right"><small>mednisalex@gmail.com</small></h2>
+    <h2 align="right"><small>mednisalex@tuta.io</small></h2>
     <h2 align='left'>Certifications:</h2>
     <h2><small>
         <ul>
@@ -49,7 +49,7 @@ p#p01{
             <li> Experience working in a professional environment, avoiding sensitive topics, and respecting confidentiality.</li>
             <li> Comfortable working with people or as an individual.</li>
             <li> Experience using various equipment safely, such as kitchen utensils, construction tools and janitorial supplies.</li>
-            <li>Exited to learn new equipment or programs.</li>
+            <li>Excited to learn new equipment or programs.</li>
             <li>Intermediate use of word processors, text editors, python, as well as some knowledge of bash, excell and shell scripting.(comfortable on a command line)</li>
             <li> Janitorial duties - Experience sweeping, moping, vacuuming and using different cleaners and disinfectants.</li>
             <li> Accommodated a variety of shifts, through out the week.</li>
